Update: get user profiles of multiple users
